--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:prod": "NODE_ENV=production node ./src/server.js",
     "start:dev": "nodemon ./src/server.js",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "migrate": "node-pg-migrate up"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +22,10 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.4.3",
+    "dotenv": "^17.2.3",
     "joi": "^18.0.1",
-    "nanoid": "^3.3.11"
+    "nanoid": "^3.3.11",
+    "node-pg-migrate": "^8.0.3",
+    "pg": "^8.16.3"
   }
 }
