--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:prod": "NODE_ENV=production node ./src/server.js",
     "start:dev": "nodemon ./src/server.js",
     "lint": "eslint ./",
-    "migrate": "node-pg-migrate up"
+    "migrate": "node-pg-migrate up",
+    "migrate:create": "node-pg-migrate create"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.4.3",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "joi": "^18.0.1",
     "nanoid": "^3.3.11",
